PY-16412 Add annotations and type comments to existing class-level definitions
for instance attributes